--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,24 @@
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
+}
+
+body::-webkit-scrollbar {
+  width: 15px;
+  margin-right: 5px;
+}
+
+body::-webkit-scrollbar-track {
+  background-color: rgba(0, 0, 0, 0);
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #0056fc;
+  border: 4px solid #fff;
+  border-radius: 10px;
+}
+
+.mt-10 {
+  margin-top: 10rem;
 }
 
 .navbar {
@@ -99,4 +118,62 @@ body {
 .bg-secondary a {
   color: rgb(156, 156, 156);
   text-decoration: none;
+}
+
+@media (max-width: 768px) {
+  .rounded-pill {
+    border-radius: 0 !important;
+  }
+}
+
+.fw-1 {
+  height: 40px;
+  width: 40px;
+}
+
+.overlay {
+  position: absolute;
+  background-color: #0056fc;
+  color: #fff;
+  overflow: hidden;
+  width: 250px;
+  height: 200px;
+  transition: 0.5s ease;
+}
+
+.item {
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.item:hover .overlay {
+  bottom: 0;
+  right: 20px;
+}
+
+.bottom-overlay {
+  bottom: -100%;
+  right: 20px;
+}
+
+.item:hover .bottom-overlay {
+  bottom: 40px;
+}
+
+.toTop {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  transition: all 0.5s ease-out;
+}
+
+.show {
+  display: block !important;
+}
+
+.hide {
+  display: none !important;
 }
